[gd_scene load_steps=2 format=2]

[ext_resource path="res://gameplay/menus/improvement_panel.gd" type="Script" id=1]

[node name="improvement_panel" type="Panel"]
margin_left = 2.0
margin_top = 2.0
margin_right = 402.0
margin_bottom = 102.0
rect_min_size = Vector2( 400, 250 )
script = ExtResource( 1 )

[node name="margin_container" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="vbox_container" type="VBoxContainer" parent="margin_container"]
margin_left = 10.0
margin_top = 10.0
margin_right = 390.0
margin_bottom = 240.0
custom_constants/separation = 10

[node name="view" type="VBoxContainer" parent="margin_container/vbox_container"]
margin_right = 380.0
margin_bottom = 200.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10

[node name="title" type="Label" parent="margin_container/vbox_container/view"]
margin_right = 380.0
margin_bottom = 14.0
text = "Current improvements"
align = 1
valign = 1

[node name="improvement_1" type="Button" parent="margin_container/vbox_container/view"]
margin_top = 24.0
margin_right = 380.0
margin_bottom = 76.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "[Select]"

[node name="improvement_2" type="Button" parent="margin_container/vbox_container/view"]
margin_top = 86.0
margin_right = 380.0
margin_bottom = 138.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "[Select]"

[node name="improvement_3" type="Button" parent="margin_container/vbox_container/view"]
margin_top = 148.0
margin_right = 380.0
margin_bottom = 200.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "[Select]"

[node name="select" type="VBoxContainer" parent="margin_container/vbox_container"]
visible = false
margin_top = 114.0
margin_right = 380.0
margin_bottom = 218.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10

[node name="title" type="Label" parent="margin_container/vbox_container/select"]
margin_right = 380.0
margin_bottom = 14.0
text = "Select improvement"
align = 1
valign = 1

[node name="add_scan_speed" type="Button" parent="margin_container/vbox_container/select"]
margin_top = 24.0
margin_right = 380.0
margin_bottom = 44.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "-0.1s scan speed [cost: 30]"

[node name="increase_scan_area" type="Button" parent="margin_container/vbox_container/select"]
margin_top = 54.0
margin_right = 380.0
margin_bottom = 74.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "+100 scan area [cost: 30]"

[node name="improvement_3" type="Button" parent="margin_container/vbox_container/select"]
margin_top = 84.0
margin_right = 380.0
margin_bottom = 104.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "-0.1 filter speed [cost: 30]"

[node name="close_button" type="Button" parent="margin_container/vbox_container"]
margin_top = 210.0
margin_right = 380.0
margin_bottom = 230.0
text = "Close"

[connection signal="pressed" from="margin_container/vbox_container/close_button" to="." method="_on_close_button_pressed"]
